unpackaged/main/default/objects/Q9__Set_Active_Partner_Result__e/Q9__Set_Active_Partner_Result__e.object-meta.xml
<CustomObject>
    <description>The success/failure result of the Metadata Deployment to update the "Active" status of DevOps partner records.</description>
    <label>Set Active Partner Result (DEPRECATED)</label>
    <pluralLabel>Set Active Partner Results</pluralLabel>
</CustomObject>