unpackaged/main/default/objects/Q9__Set_Active_Partner_Result__e/fields/Q9__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Q9__Job_Id__c</fullName>
    <description>Id of the Metadata Deployment job</description>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>