unpackaged/main/default/objects/Q9__Set_Active_Partner_Result__e/fields/Q9__Success__c.field-meta.xml
<CustomField>
    <fullName>Q9__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the Metadata Deployment job successful?</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>